--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body{
 
 .card-title {
   overflow: hidden;
-  color: rgba(0, 0, 0, 0.85);
+  color: red;
   font-weight: 500;
   font-size: 16px;
   white-space: nowrap;
